--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+chrome_data
+target
+index.node
+/resources/windows/chromium
 node_modules
 dist
 dist-ssr
