--- a/package.json
+++ b/package.json
@@ -1,45 +1,69 @@
 {
   "name": "electron_bingo",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "description": "electron_bingo",
+  "main": "dist-electron/index.js",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . Namegoeshere --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Namegoeshere\"",
-    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
+    "build:win": "tsc && vite build && electron-builder --win --x64",
+    "build:mac": "tsc && vite build && electron-builder --mac",
+    "build:all": "tsc && vite build && electron-builder --win --x64 --mac",
+    "build:vite": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.11.2",
-    "crypto": "^1.0.1",
-    "moment": "^2.29.4",
+    "@types/react-virtualized": "^9.21.21",
+    "antd": "^5.1.5",
+    "axios": "^1.2.3",
+    "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
+    "electron-log": "^4.4.8",
+    "electron-store": "^8.1.0",
+    "electron-updater": "^5.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "framer-motion": "^9.1.6",
+    "glob": "^8.1.0",
+    "lodash": "^4.17.21",
+    "path-to-regexp": "^6.2.1",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
+    "react-hook-form": "^7.43.2",
+    "react-router-dom": "^6.6.2",
+    "react-virtualized": "git+https://git@github.com/remorses/react-virtualized-fixed-import.git#9.22.3",
+    "recoil": "^0.7.6",
+    "swr": "^2.0.0",
+    "vite-electron-plugin": "^0.8.2"
   },
   "devDependencies": {
-    "@electron/packager": "^18.0.0",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "@vitejs/plugin-react": "^4.0.4",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
+    "@vitejs/plugin-react": "^3.0.1",
     "autoprefixer": "^10.4.16",
-    "electron": "^26.1.0",
-    "electron-builder": "^24.6.4",
-    "eslint": "^8.48.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss-loader": "^7.3.3",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vite-plugin-electron": "^0.14.0",
-    "vite-plugin-electron-renderer": "^0.14.5",
-    "vite-plugin-svgr": "^4.2.0"
-  },
-  "main": "dist-electron/main.js"
+    "cross-env": "^7.0.3",
+    "electron": "^23.1.1",
+    "electron-builder": "^23.6.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.1",
+    "inquirer": "^9.1.4",
+    "inquirer-autocomplete-prompt": "^3.0.0",
+    "moment": "^2.29.4",
+    "postcss": "^8.4.32",
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^4.9.4",
+    "typescript-styled-plugin": "^0.18.2",
+    "vite": "^4.0.4",
+    "vite-plugin-checker": "^0.5.3",
+    "vite-tsconfig-paths": "^4.0.3"
+  }
 }
