--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "antd": "^5.11.2",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
@@ -22,12 +28,14 @@
   },
   "devDependencies": {
     "@electron/packager": "^18.0.0",
+    "@types/body-parser": "^1.19.5",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.16",
+    "body-parser": "^1.20.2",
     "electron": "^26.1.0",
     "electron-builder": "^24.6.4",
     "eslint": "^8.48.0",
@@ -42,5 +50,6 @@
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-svgr": "^4.2.0"
   },
-  "main": "dist-electron/main.js"
+  "main": "dist-electron/main.js",
+  "proxy": "http://localhost:3000"
 }
