--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/lowdb": "^1.0.15",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react": "^4.0.4",
@@ -38,6 +39,7 @@
     "postcss-loader": "^7.3.3",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "vite": "^4.4.9",
     "vite-plugin-electron": "^0.14.0",
     "vite-plugin-electron-renderer": "^0.14.5",
