--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^8.48.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "lodash": "^4.17.21",
     "postcss-loader": "^7.3.3",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
