--- a/database/settings.json
+++ b/database/settings.json
@@ -1,6 +1,6 @@
 {
   "company": "NOSAH_SAFETY",
-  "durationQuestion": 2,
+  "questionBreakTime": 2000,
   "minQuantityQuestion": 5,
   "maxQuantityQuestion": 20
 }
