--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . Namegoeshere --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Namegoeshere\"",
-    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
+    "preview": "vite preview"
   },
   "dependencies": {
     "antd": "^5.11.2",
     "crypto": "^1.0.1",
+    "dexie": "^3.2.4",
     "lowdb": "^6.1.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -23,7 +21,6 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@electron/packager": "^18.0.0",
     "@types/lowdb": "^1.0.15",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
