--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -3,9 +3,9 @@
  */
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "YourAppID",
+  "appId": "nosah.safety.2023",
   "asar": true,
-  "productName": "YourAppName",
+  "productName": "NOSAH_SAFETY",
   "directories": {
     "output": "release/${version}"
   },
