--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -20,6 +20,7 @@
     "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
   },
   "win": {
+    "icon": "build/logo.ico",
     "target": [
       {
         "target": "nsis",
